--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Font family */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap');
